--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-preset-es2015": "^6.24.1",
-    "bootstrap": "^3.4.0",
+    "bootstrap": ">=4.1.2",
     "css-loader": "^0.28.11",
     "react-bootstrap": "^0.32.1",
     "react-perfect-scrollbar": "^1.1.1",
